# green-v1n3-3

./: README.md  memory.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
anchor/: Anchor.toml  README.md
anchor/programs/v1n3_staking/: Cargo.toml
anchor/programs/v1n3_staking/src/: lib.rs
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/admin/: page.tsx
app/campaign/: page.tsx
app/communities/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/docs/: page.tsx
app/news/: page.tsx
app/onboarding/: page.tsx
app/profile/: page.tsx
app/whitelist/: page.tsx
app/whitepaper/: page.tsx
components/: communities-section.tsx  cta-section.tsx  features-section.tsx  footer.tsx  gamification-section.tsx  header.tsx  hero-section.tsx  how-it-works-section.tsx  marketplace-preview.tsx  outcomes-section.tsx  structure-section.tsx  theme-toggle.tsx  token-section.tsx  v1n3-loader.tsx  vision-section.tsx
components/admin/: admin-dashboard.tsx
components/ai/: advisor-chat.tsx  markdown.tsx  support-widget-gate.tsx  support-widget.tsx  yield-estimator.tsx
components/auth/: connect-modal.tsx
components/campaign/: campaign-poster.tsx  campaign-view.tsx
components/communities/: communities-hub.tsx  community-feed.tsx  community-hero.tsx  community-products.tsx  community-services.tsx
components/dashboard/: dashboard-communities.tsx  dashboard-marketplace.tsx  dashboard-overview.tsx  dashboard-placeholder.tsx  (+6 more)
docs/: whitepaper.md
scripts/: inspect-mint.mjs  run-migration.mjs  supabase-otp-email-templates.md  upload-token-metadata.mjs
(+183 files in other folders)
