[package]
name = "v1n3_staking"
version = "0.1.0"
description = "V1N3 staking program (Token-2022): vault, stake, unstake, claim, fund rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "v1n3_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
